# simcraft

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.standalone  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  standalone-entrypoint.sh
.github/: CODEOWNERS
.github/workflows/: deploy.yml  desktop-build-platform.yml  desktop-linux.yml  desktop-windows.yml
backend/: Cargo.toml  Dockerfile  config.py  main.py  schemas.py
backend/core/: Cargo.toml
backend/core/src/: game_data.rs  models.rs  profileset_generator.rs  result_parser.rs  server.rs  simc_runner.rs
backend/core/src/storage/: memory.rs  mod.rs  postgres.rs  sqlite.rs
backend/routers/: items.py
backend/scripts/: compact-data.js
backend/server/: Cargo.toml  Dockerfile
backend/server/src/: main.rs
backend/services/: addon_parser.py  game_data.py  profileset_generator.py  result_parser.py
data/: bonuses.json  enchantments.json  instances.json  item-conversions.json
desktop/: Dockerfile.linux  Dockerfile.resources  package.json
desktop/scripts/: build-backend.js  build-simc.js  dev.js  publish.js
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/src/: game_data.rs  profileset_generator.rs  simc_runner.rs
frontend/: next.config.mjs  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: DesktopAppLink.tsx  DynamicLayout.tsx  ResultsChart.tsx  SettingsPopover.tsx  SidebarNav.tsx  SimContext.tsx  SimForm.tsx  SimSharedConfig.tsx  SimStatus.tsx  (+6 more)
web/backend/services/: game_data.py  profileset_generator.py  simc.py
(+18 files in other folders)
