[package]
name = "simhammer-server"
version.workspace = true
edition = "2021"

[features]
default = []
desktop = ["simhammer-core/desktop"]
postgres = ["simhammer-core/postgres"]

[dependencies]
simhammer-core = { path = "../core", features = ["web"] }
tokio = { version = "1", features = ["full"] }
